Fix responsiveness of all sections on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
 }
 
 :root {
+  margin: 0px;
   background: rgb(230, 230, 225);
   background: linear-gradient(180deg, rgba(230, 230, 225, 1) 35%, rgba(232, 255, 247, 1) 100%);
   /* --foreground-rgb: 0, 0, 0;
@@ -40,7 +41,12 @@
   }
 } */
 
-body {
+body,html {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
       transparent,
